--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Cal+Sans&family=Tagesschrift&display=swap" rel="stylesheet">
   
   <style>
-    /* Smooth scroll when clicking nav links */
     html {
       scroll-behavior: smooth;
     }
-
     body {
       margin: 0;
       font-family: 'Cal Sans', sans-serif;
@@ -82,7 +80,6 @@
       bottom: 0;
       width: 100%;
     }
-    /* Portrait image style for About section */
     .about-image {
       background-image: url('https://www.shutterstock.com/image-photo/christian-crosses-on-hill-outdoors-600nw-1918920797.jpg');
       background-size: cover;
@@ -92,7 +89,6 @@
       margin: 2rem auto;
       border-radius: 10px;
     }
-    /* Portrait image style for Merch section */
     .merch-image {
       background-image: url('https://i.etsystatic.com/15275342/r/il/514db4/1839610982/il_570xN.1839610982_ibwn.jpg');
       background-size: cover;
@@ -109,7 +105,6 @@
 
 <header>
   <h1>Follow The Word</h1>
-  <p>"As iron sharpens iron, so one person sharpens another." - Proverbs 27:17</p>
 </header>
 
 <nav>
@@ -123,30 +118,30 @@
 <main>
   <section id="home">
     <h2>Welcome to Follow The Word</h2>
-    <p>Spreading the message of Jesus Christ with love and truth. Join us as we grow together in faith!</p>
-    <div class="verse" id="daily-verse">Loading daily verse...</div>
+    <p></p>
+    <div class="verse" id="daily-verse"></div>
   </section>
 
   <section id="about">
     <h2>About</h2>
-    <p>Follow The Word was founded with the mission to bring more hearts to Christ and strengthen believers through daily encouragement and teaching. I have stuggled myself with following the path of the lord. I have found that with a reminder of his love everyday really helps me seek him in my everyday life. I want it to make a mission for people who know christ to spread the gospel to others. I feel like everyone should be able to find eternal love, but its our mission to guide them. Wether its a close friend, family member, acquaintance, or even a stranger. Just a simple "God loves you" can change someones life. </p>
+    <p></p>
     <div class="about-image"></div>
   </section>
 
   <section id="messages">
     <h2>Messages</h2>
-    <p>Coming soon: blog posts, devotionals, and encouragement for your journey with Jesus.</p>
+    <p></p>
   </section>
 
   <section id="merch">
     <h2>Merch</h2>
-    <p>Exciting merch is on the way! Stay tuned for faith-inspired t-shirts, hats, and more.</p>
+    <p></p>
     <div class="merch-image"></div>
   </section>
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>Want to reach out? Email us at <a href="mailto:contact@followtheword.com">contact@followtheword.com</a>.</p>
+    <p></p>
   </section>
 </main>
 
@@ -156,17 +151,15 @@
 
 <script>
   const verses = [
-    "For I know the plans I have for you, declares the LORD. - Jeremiah 29:11",
-    "The LORD is my shepherd; I shall not want. - Psalm 23:1",
-    "I can do all things through Christ who strengthens me. - Philippians 4:13",
-    "Trust in the LORD with all your heart. - Proverbs 3:5",
-    "Be strong and courageous. Do not be afraid. - Joshua 1:9"
+    "",
+    "",
+    "",
+    "",
+    ""
   ];
 
   function showDailyVerse() {
-    const today = new Date();
-    const index = today.getDate() % verses.length;
-    document.getElementById('daily-verse').innerText = verses[index];
+    document.getElementById('daily-verse').innerText = "";
   }
 
   showDailyVerse();
